image url changed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
 <div class="container-fluid">
   <div>
     <div class="text-center">
       <h1> Random Quote Generator </h1>
-      <!--<p>Some quotes are here</p>-->
-      <img src="http://s5.tinypic.com/1jqkxl_th.jpg" alt = "Example image"/>
-      <br/>
+
+      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb"/>
+      <!--<img src = "https://cdn.pixabay.com/photo/2018/01/29/23/16/plant-3117533_960_720.jpg" alt = "Example image"/>
+      -->
+       <p>Each click, new quote!</p>
       <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
       <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
     </div>
