some alteration added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <div class="container-fluid">
   <div>
     <div class="text-center">
       <h1> Random Quote Generator </h1>
 
-      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb"/>
+      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "example image"/>
       <!--<img src = "https://cdn.pixabay.com/photo/2018/01/29/23/16/plant-3117533_960_720.jpg" alt = "Example image"/>
       -->
        <p>Each click, new quote!</p>
@@ -15,4 +16,4 @@
       <span class="author"></span>
     </div>
   </div>
-</div>
+</div>  
