--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <div class="text-center">
       <h1> Random Quote Generator </h1>
 
-      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "example image"/>
-      <!--<img src = "https://cdn.pixabay.com/photo/2018/01/29/23/16/plant-3117533_960_720.jpg" alt = "Example image"/>
-      -->
+      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
        <p>Each click, new quote!</p>
       <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
       <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
+      <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
     </div>
     <div class="quotes text-center">
       <span class="quote"></span><br/>
-      <span class="author"></span>
+      <span class="author"></span><br/>
+      <span class="link"><span>
+
     </div>
   </div>
-</div>  
+</div>
+ 
