some changes added

--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
+<!DOCTYPE html>
+<head>
+  <title>
+    Random Quote Generator
+  </title>
+</head>
 
-<div class="container-fluid">
-  <div>
-    <div class="text-center">
-      <h1> Random Quote Generator </h1>
+<body>
 
-      <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
-       <p>Each click, new quote!</p>
-      <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
-      <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
-      <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
-    </div>
-    <div class="quotes text-center">
-      <span class="quote"></span><br/>
-      <span class="author"></span><br/>
-      <span class="link"><span>
+  <div class="container-fluid">
+    <div>
+      <div class="text-center">
+        <h1> Random Quote Generator </h1>
 
+        <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
+        <p>Each click, new quote!</p>
+        <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
+        <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
+        <i class="fa fa-twitter fa-2x"></i>
+        <id="tweet">Tweet out<i class="fa fa-twitter fa-2x"></i>
+        <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
+      </div>
+      <div class="quotes text-center">
+        <span class="quote"></span><br/>
+        <span class="author"></span><br/>
+        <span class="link"><span>
+
+      </div>
     </div>
   </div>
-</div>
- 
+</body>
+</html>
