some changes added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>Each click, new quote!</p>
         <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
         <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
+        <!-- Trying to add twitter symbol-->
         <i class="fa fa-twitter fa-2x"></i>
         <id="tweet">Tweet out<i class="fa fa-twitter fa-2x"></i>
         <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
