--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <title>
-    Random Quote Generator
-  </title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Random Quote Generator</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
+    <link href="style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -25,9 +32,9 @@
         <span class="quote"></span><br/>
         <span class="author"></span><br/>
         <span class="link"><span>
-
       </div>
     </div>
   </div>
+
 </body>
 </html>
