--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
         <p>Each click, new quote!</p>
+        <p>You may find quotes from great people of the world in a random basis</p>
         <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
         <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
         <!-- Trying to add twitter symbol-->
