--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,6 @@
         <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
         <!-- Trying to add twitter symbol-->
         <i class="fa fa-twitter fa-2x"></i>
-        <id="tweet">Tweet out<i class="fa fa-twitter fa-2x"></i>
         <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
       </div>
       <div class="quotes text-center">
@@ -36,6 +35,9 @@
       </div>
     </div>
   </div>
-
 </body>
 </html>
+
+<!-- javascript written below with link to jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
