something has been definitely changed

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <div class="container-fluid">
     <div>
-      <div class="text-center">
+      <div class="text-center"><br><br>
         <h1> Random Quote Generator </h1>
-
-        <img src="https://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
+        <p>=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
+        <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
         <p>Each click, new quote!</p>
-        <p>You may find quotes from great people of the world in a random basis</p>
-        <button class="btn btn-default" type = "submit" id="newQuote">New Quote</button>
+        <p>Find quotes from great people of the world on a random basis</p>
+        <button class="btn btn-default" type = "submit" id="newQuote">New quote</button>
         <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
         <!-- Trying to add twitter symbol-->
         <i class="fa fa-twitter fa-2x"></i>
