--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="text-center"><br><br>
         <h1> Random Quote Generator </h1>
         <p>=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
-        <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt = "flower image"/>
+        <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
         <p>Each click, new quote!</p>
         <p>Find quotes from great people of the world on a random basis</p>
-        <button class="btn btn-default" type = "submit" id="newQuote">New quote</button>
-        <a href="#" class="btn btn-default" type="submit" id="tweet">Tweet out</a>
+        <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
+        <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
         <!-- Trying to add twitter symbol-->
         <i class="fa fa-twitter fa-2x"></i>
-        <a href="#" class="btn btn-default" type="submit" id="facebook">Facebook</a>
+        <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
       </div>
       <div class="quotes text-center">
         <span class="quote"></span><br/>
