share to facebook succefully added

--- a/index.html
+++ b/index.html
@@ -7,29 +7,27 @@
     <title>Random Quote Generator</title>
 </head>
 <body>
-
-  <div class="container-fluid">
-    <div>
-      <div class="text-center"><br><br>
-        <h1> Random Quote Generator </h1>
-        <p>=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
-        <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
-        <p>Each click, new quote!</p>
-        <p>Find quotes from great people of the world on a random basis</p>
-        <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
-        <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
+    <div class="container-fluid">
+        <div class="text-center"><br><br>
+            <h1> Random Quote Generator </h1>
+            <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
+            <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
+            <p class="middle">Each click, new quote!</p>
+            <p id="bottom">Find quotes from great people of the world on a random basis</p>
+            <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
+            <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
         <!-- Trying to add twitter symbol-->
-        <i class="fa fa-twitter fa-2x"></i>
-        <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
-      </div>
-      <div class="quotes text-center">
-        <span class="quote"></span><br/>
-        <span class="author"></span><br/>
-        <span class="link"><span>
-      </div>
+            <i class="fa fa-twitter fa-2x"></i>
+            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+        </div>
+        <div class="quotes text-center">
+            <span class="quote">"Just as a candle cannot burn without fire, men cannot live without a spiritual life. "
+-Buddha </span><br/>
+            <span class="author"></span><br/>
+            <span class="link"></span>
+        </div>
+            <span class="link"></span>
     </div>
-  </div>
-
 </body>
 </html>
 <!--Stylesheet link-->
