--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Random Quote Generator</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="text-center"><br><br>
+    <div class="container-fluid text-center">
+        <br><br>
             <h1> Random Quote Generator </h1>
             <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
             <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
@@ -19,12 +19,11 @@
         <!-- Trying to add twitter symbol-->
             <i class="fa fa-twitter fa-2x"></i>
             <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
-        </div>
-        <div class="quotes text-center">
+        <div class="quotes">
             <span class="quote">"Just as a candle cannot burn without fire, men cannot live without a spiritual life. "
 -Buddha </span><br/>
             <span class="author"></span><br/>
-            <span class="link"></span>
+
         </div>
             <span class="link"></span>
     </div>
