--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             <span class="quote">"Just as a candle cannot burn without fire, men cannot live without a spiritual life. "
 -Buddha </span><br/>
             <span class="author"></span><br/>
-
         </div>
-            <span class="link"></span>
+            <span class="link"></span><br><br><br>
+            <footer>
+                <p>Posted by: Bijaya Manandhar; &copy;; bijaya.manandhar@hotmail.com</p>
+            </footer>
     </div>
 </body>
 </html>
