--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
         <!-- Trying to add twitter symbol-->
             <i class="fa fa-twitter fa-2x"></i>
-            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+            <button a href="#" class="btn btn-default facebook" id="facebook" type="submit">Facebook</button>
         <div class="quotes">
             <span class="quote">"Just as a candle cannot burn without fire, men cannot live without a spiritual life. "
 -Buddha </span><br/>
