--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- The above 3 meta tags *must* come first in the head; any other-->
     <title>Random Quote Generator</title>
 </head>
 <body>
+
     <div class="container-fluid text-center">
-        <br><br>
-            <h1> Random Quote Generator </h1>
-            <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
+            <h5> Random Quote Generator </h5>
+            <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
             <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
             <p class="middle">Each click, new quote!</p>
             <p id="bottom">Find quotes from great people of the world on a random basis</p>
@@ -18,23 +18,19 @@
             <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
         <!-- Trying to add twitter symbol-->
             <i class="fa fa-twitter fa-2x"></i>
-            <button a href="#" class="btn btn-default facebook" id="facebook" type="submit">Facebook</button>
+            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
         <div class="quotes">
-            <span class="quote">"Just as a candle cannot burn without fire, men cannot live without a spiritual life. "
--Buddha </span><br/>
-            <span class="author"></span><br/>
+            <span class="quote">"All know the way; few actually walk it."</span><br/>
+            <span class="author">-Bodhidharma</span><br/>
         </div>
-            <span class="link"></span><br><br><br>
-            <footer>
-                <p>Posted by: Bijaya Manandhar; &copy;; bijaya.manandhar@hotmail.com</p>
-            </footer>
+            <span class="link">http://forismatic.com/en/629925f992/</span>
     </div>
+
 </body>
 </html>
-<!--Stylesheet link-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
     <link href="style.css" rel="stylesheet">
 
-<!-- javascript written below with link to jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="script.js"></script>
