--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 <body>
 
     <div class="container-fluid text-center">
-            <h5> Random Quote Generator </h5>
-            <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
-            <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
-            <p class="middle">Each click, new quote!</p>
-            <p id="bottom">Find quotes from great people of the world on a random basis</p>
-            <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
-            <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
-        <!-- Trying to add twitter symbol-->
-            <i class="fa fa-twitter fa-2x"></i>
-            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+        <h5> Random Quote Generator </h5>
+        <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
+        <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
+        <p class="middle">Each click, new quote!</p>
+        <p id="bottom">Find quotes from great people of the world on a random basis</p>
+        <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
         <div class="quotes">
             <span class="quote">"All know the way; few actually walk it."</span><br/>
             <span class="author">-Bodhidharma</span><br/>
         </div>
-            <span class="link">http://forismatic.com/en/629925f992/</span>
+        <span class="link">http://forismatic.com/en/629925f992/</span><br><br>
+        <div class="text-center share">
+            <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
+            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+        </div>
     </div>
-
+    <footer>
+        <p class="text-center">Posted by: bijaya.manandhar@hotmail.com; &copy ; </p>
+    </footer>
 </body>
 </html>
 
