some changes added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <p id="bottom">Find quotes from great people of the world on a random basis</p>
         <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
         <div class="quotes">
-            <span class="quote">"All know the way; few actually walk it."</span><br/>
-            <span class="author">-Bodhidharma</span><br/>
+            <span class="quote">Please click "New quote" button</span><br/>
+            <span class="author"></span><br/>
         </div>
-        <span class="link">http://forismatic.com/en/629925f992/</span><br><br>
+        <span class="link"></span><br><br>
         <div class="text-center share">
             <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
             <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
