some changes being added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
             <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
         </div>
-    </div>
+    </div><br>
     <footer>
-        <p class="text-center">Posted by: bijaya.manandhar@hotmail.com; &copy ; </p>
+        <p class="text-center foot">code by: bijaya.manandhar@hotmail.com; &copy</p>
     </footer>
 </body>
 </html>
