--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
     <div class="container-fluid text-center">
         <h5> Random Quote Generator </h5>
-        <p class="line">=-=-=-=-=-=-=-=-=-=-=-=-=-=</p>
         <img src="http://images.pexels.com/photos/531739/pexels-photo-531739.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="flower image"/>
-        <p class="middle">Each click, new quote!</p>
         <p id="bottom">Find quotes from great people of the world on a random basis</p>
-        <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
-        <div class="quotes">
+        <div class="quote-box">
+          <div class="new-quote">
+              <button class="btn btn-default" type ="submit" id="newQuote">New quote</button>
+          </div><br/>
             <span class="quote">Please click "New quote" button</span><br/>
             <span class="author"></span><br/>
-        </div>
-        <span class="link"></span><br><br>
-        <div class="text-center share">
-            <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
-            <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+            <span class="link"></span><br><br>
+            <div class="share">
+              <button a href="#" class="btn btn-default tweet" type="submit" id="tweet">Tweet out</button>
+              <button a href="#" class="btn btn-default facebook" type="submit" id="facebook">Facebook</button>
+            </div>
         </div>
     </div><br>
     <footer>
